[gd_scene load_steps=5 format=3 uid="uid://c1ipgkdm40l6c"]

[ext_resource type="Theme" uid="uid://ddjoduj1ya6tp" path="res://assets/5PFH.tres" id="1_23rvc"]
[ext_resource type="Script" path="res://Resources/GameData/CampaignSetupScreen.gd" id="1_sapom"]
[ext_resource type="Texture2D" uid="uid://cb3wc2cq0m72j" path="res://assets/BookImages/Dec_9_Gambling_Hall.jpg" id="3_mupwv"]
[ext_resource type="PackedScene" uid="uid://dp66b6flafme3" path="res://Resources/CampaignManagement/Scenes/VictoryConditionSelection.tscn" id="3_victory"]

[node name="CampaignSetupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_23rvc")
script = ExtResource("1_sapom")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mupwv")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Campaign Setup"
horizontal_alignment = 1

[node name="CrewNameInput" type="LineEdit" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Crew Name"

[node name="DifficultyOptionButton" type="OptionButton" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="VictoryConditionContainer" type="HBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="VictoryTypeLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/VictoryConditionContainer"]
layout_mode = 2

[node name="VictoryCountLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/VictoryConditionContainer"]
layout_mode = 2

[node name="SetVictoryConditionButton" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/VictoryConditionContainer"]
layout_mode = 2
text = "Set Victory Condition"

[node name="CrewSizeContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
text = "Select Crew Size:"

[node name="HSlider" type="HSlider" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 3.0
rounded = true

[node name="CurrentSizeLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
text = "Current Crew Size: 3"

[node name="TutorialLabel" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
text = "Tutorial text goes here"

[node name="LockCrewSizeButton" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer"]
layout_mode = 2
text = "Lock Crew Size"

[node name="OptionalFeaturesContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="StartCampaignButton" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Start Campaign"

[node name="RightPanel" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/RightPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/RightPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightPanel/Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Campaign Variations"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VariationDescriptions" type="VBoxContainer" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MessageLabel" type="Label" parent="HBoxContainer/RightPanel/Panel/MarginContainer/VBoxContainer/ScrollContainer/VariationDescriptions"]
layout_mode = 2
autowrap_mode = 2

[node name="VictoryConditionSelection" parent="." instance=ExtResource("3_victory")]
visible = false
layout_mode = 1
script = null

[connection signal="text_changed" from="HBoxContainer/LeftPanel/VBoxContainer/CrewNameInput" to="." method="_on_crew_name_input_text_changed"]
[connection signal="item_selected" from="HBoxContainer/LeftPanel/VBoxContainer/DifficultyOptionButton" to="." method="_on_difficulty_option_button_item_selected"]
[connection signal="value_changed" from="HBoxContainer/LeftPanel/VBoxContainer/CrewSizeContainer/HSlider" to="." method="_on_crew_size_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/StartCampaignButton" to="." method="_on_start_campaign_button_pressed"]
